--- a/PythonGuru/app/src/main/AndroidManifest.xml
+++ b/PythonGuru/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".AnswerActivity">
+        </activity>
+        <activity android:name=".FinalQuizActivity">
+        </activity>
+        <activity android:name=".QuizActivity">
+        </activity>
+        <activity android:name=".LessonActivity">
+        </activity>
         <activity android:name=".LessonsActivity">
         </activity>
         <activity android:name=".ProgressActivity">
