--- a/PythonGuru/app/src/main/AndroidManifest.xml
+++ b/PythonGuru/app/src/main/AndroidManifest.xml
@@ -9,29 +9,29 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".HelpActivity">
+        <activity android:name=".HelpActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".AnswerActivity">
+        <activity android:name=".AnswerActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".FinalQuizActivity">
+        <activity android:name=".FinalQuizActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".QuizActivity">
+        <activity android:name=".QuizActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".LessonActivity">
+        <activity android:name=".LessonActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".LessonsActivity">
+        <activity android:name=".LessonsActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ProgressActivity">
+        <activity android:name=".ProgressActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ProfileActivity">
+        <activity android:name=".ProfileActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".QuizzesActivity">
+        <activity android:name=".QuizzesActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".RegisterActivity">
+        <activity android:name=".RegisterActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".MainMenuActivity">
+        <activity android:name=".MainMenuActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
