--- a/PythonGuru/app/src/main/AndroidManifest.xml
+++ b/PythonGuru/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".ForgotPwdActivity">
+        </activity>
         <activity
                 android:name=".NewQuestionActivity"
                 android:screenOrientation="portrait">
